# RaytracingMin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RaytracingMin.sln  RaytracingMin.vcxproj  RaytracingMin.vcxproj.filters  settingData.json  settingData.xml  simpleSetting1.json  simpleSetting2.json
.github/workflows/: build.yml
ExampleScene/: cornellBoxSetting.json  simpleSetting1.json  simpleSetting2.json
ValidationPython/: ValidationPython.vcxproj  ValidationPython.vcxproj.filters
ValidationPython/src/: main.cpp
ValidationPython/x64/Debug/: ValidationPython.exe.recipe
ValidationPython/x64/Release/: ValidationPython.exe.recipe  ValidationPython.iobj  ValidationPython.ipdb  ValidationPython.pyd.recipe  cppmodule.iobj  cppmodule.ipdb  cppmodule.pyd.recipe
camera/: convex.json  dgauss50mm.json
python/: ExternalProgram.props  cppmodule.exp  cppmodule.pyd  gui_test.py  main.ipynb  main.py  python.vcxproj  python.vcxproj.filters
python/iframe_figures/: figure_12.html  figure_13.html  figure_8.html  figure_9.html
python/sample/: LensSystem.py  dgauss50mm.csv  main.ipynb  simple.csv
python/src/: Camera_py.cpp  Camera_py.h  main_py.cpp
python/x64/Release/: CodeAnalysisResultManifest.txt  cppmodule.ipdb
src/: 2D.cpp  2D.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Constant.h  HitRecord.h  Random.cpp  Random.h  Ray.h  Renderer.cpp  Renderer.h  SceneObject.cpp  SceneObject.h  SettingData.cpp  SettingData.h  Spectrum.cpp  Spectrum.h  Texture.cpp  Texture.h  Transparent.h  WaveSolver.h  main.cpp  sceneLight.h
(+16 files in other folders)
